@@ -8,10 +8,7 @@
  * Based on the original code of Anope by Anope Team.
  * Based on the original code of Thales by Lucas.
  * 
- * 
- *
  */
-
 /* include/sysconf.h.in.  Generated from configure.in by autoheader.  */
 
 /* Setting to BSD style signals */
@@ -82,6 +79,12 @@
 
 /* Define to 1 if you have the `inet_aton' function. */
 #undef HAVE_INET_ATON
+
+/* Define to 1 if you have the `inet_ntop' function. */
+#undef HAVE_INET_NTOP
+
+/* Define to 1 if you have the `inet_pton' function. */
+#undef HAVE_INET_PTON
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
@@ -340,4 +343,3 @@ char *strsignal(int sig);
 #endif
 
 #endif
-
